syntax = "proto3";
package cosmos.mint.v1beta1;

option go_package = "cosmossdk.io/x/mint/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "google/protobuf/timestamp.proto";

// Minter represents the minting state.
message Minter {
  // current annual inflation rate
  string inflation = 1 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  // current annual expected provisions
  string annual_provisions = 2 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  // genesis block time
  google.protobuf.Timestamp genesis_time = 3 [(gogoproto.stdtime) = true];
  // timestamp of the previous block.
  google.protobuf.Timestamp previous_block_time = 4 [(gogoproto.stdtime) = true];
  // type of coin to mint
  string mint_denom = 5;
}
